@@ -1,3 +1,9 @@
+Wed May 07 22:34:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* setup.py,testsuite/coverage.py,testsuite/runtests.py,xappy/test.py:
+	  Reorganise test runners, so that "eggsetup.py test" actually
+	  works.
+
 Wed May 07 14:25:54 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* testsuite/coverage.py: Update with changes from latest upstream.
